--- a/LinearRegression_example/input.yml
+++ b/LinearRegression_example/input.yml
@@ -18,5 +18,6 @@ eta: 0.00000001
 
 n_iter: 60
 
+test_split_ratio: 0.8 #New parameter for test Split/Cross Validation ratio, 80/20 split
 
 random_state: 234
